--- a/ToDoList/ToDoList/src/main/resources/application.yaml
+++ b/ToDoList/ToDoList/src/main/resources/application.yaml
@@ -8,4 +8,5 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true    # Optional: logs SQL queries to console
+    show-sql: true 
+    
