--- a/ToDoList/ToDoList/src/main/resources/application.properties
+++ b/ToDoList/ToDoList/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ToDoList
+# application.properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bintangkantata6@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
